export enum QuestionStatus {
  Active,
  Answered,
  Closed,
  Deleted,
}
