import User from "./User";

export default class Guest extends User {
}
