export default class Flag {
}
